--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Paradigma di Stockhausen</title>
+  <title>Analisi Compositiva: Karheinz Stockhausen</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -82,7 +82,7 @@
           <div class="card col-12 col-lg-10">
               <div class="card-wrapper">
                   <div class="card-box align-center">
-                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>IL PARADIGMA DI STOCKHAUSEN</strong></h4>
+                      <h4 class="card-title mbr-fonts-style align-center mb-4 display-2"><strong>ANALISI COMPOSITIVA: KARLHEINZ STOCKHAUSEN</strong></h4>
                   </div>
               </div>
           </div>
@@ -103,37 +103,50 @@
                       <strong>INDICE</strong>
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
+                    <ul>
+                      <li><b>1. I primi brani di Stockhausen</b></li>
                       <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/01_00_il_paradigma.html"><b>1. Il Paradigma</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/02_00_il_concetto_di_pregiudizio.html"><b>2. Il Concetto di Pregiudizio</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_00_da_cosa_è_costituito_un_paradigma.html"><b>3. Da Cosa è Costituito un Paradigma</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_01_etude/"><b>1.1. Etude</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_02_studio_i/"><b>1.2. Studio I</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_03_studio_ii/"><b>1.3. Studio II</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_04_i_tre_brani_a_confronto/"><b>1.4. I tre studi a confronto</b></a></li>
+                    </ul>
+                      <li><b>2. Punkte, Gruppen, Momente</b></li>
+                      <ul>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_01_kontra_punkte/"><b>2.1. Kontra-Punkte</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_02_gruppen/"><b>2.2. Gruppen</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_00_momente/"><b>2.3. Momente</b></a></li>
                         <ul>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_01_esemplari.html"><b>3.1. Esemplari</b></a></li>
-                          <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/03_02_valori.html"><b>3.2. Valori</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_00_modelli.html"><b>4. Modelli</b></a></li>
+                        <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_01_moment_form/"><b>2.3.1. Moment Form</b></a></li>
+                        <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_02_momenti_kmdi/"><b>2.3.2. Momenti K, M, D, I</b></a></li>
+                        </ul>
+                    <li><a href="https://velitch.github.io/velitch/2021-11-02-02_04_00_gesang_der_jungelinge/"><b>2.4. Gesang der Jüngelinge</b></a></li>
                         <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_01_vibrazione_come_modello_universale.html"><b>4.1. Vibrazione come movimento universale</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_02_continuum.html"><b>4.2. Continuum</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_03_spirale.html"><b>4.3. Spirale</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/04_04_galassia.html"><b>4.4. Galassia</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_00_generalizzazioni_principi_operativi.html"><b>5. Generalizzazioni: principi operativi</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_04_01_gruppi_o_momenti/"><b>2.4.1. Gruppi o Momenti?</b></a></li>
+                        </ul>
+                    </ul>
+                    <li><a href="https://velitch.github.io/velitch/2021-11-02-03_00_plus_minus/"><b>3. Plus-Minus</b></a></li>
                         <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_01_metodi_nella_tradizione.html"><b>5.1. Metodi nella tradizione</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_02_metodi_in_stockhausen.html"><b>5.2. Metodi in Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_03_principi_operativi_di_stockhausen.html"><b>5.3. Principi operativi di Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_04_materiali_di_base_di_stockhausen.html"><b>5.4. Materiali di base (o di lavoro) di Stockhausen</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/05_05_processo.html"><b>5.5. Processo</b></a></li>
-                      </ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_00_generalizzazioni_principi_costruttivi.html"><b>6. Generalizzazioni: principi costruttivi</b></a></li>
+                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_01_regole/"><b>3.1. Regole</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_00_partitura/"><b>3.2. Partitura</b></a></li>
                         <ul>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_01_serializzazione.html"><b>6.1. Serializzazione</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_02_genesi_della_forma.html"><b>6.2. Genesi della forma</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_03_proiezione_della_formula.html"><b>6.3. Proiezione della formula</b></a></li>
-                        <li><a href="https://www.gabrielavelitch.com/pages/learn/il_paradigma_di_stockhausen/06_04_schema.html"><b>6.4. Schema</b></a></li>
+                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_01_istruzioni/"><b>3.2.1. Istruzioni</b></a></li>
+                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_02_simboli/"><b>3.2.2. Simboli</b></a></li>
                       </ul>
+                    </ul>
+                    <li><a href="https://velitch.github.io/velitch/2021-11-02-04_00_mikrofonie_i/"><b>4. Mikrofonie I</b></a></li>
+                      <ul>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_01_informazioni_tecniche/"><b>4.1. Informazioni Tecniche</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_02_struttura/"><b>4.2. Struttura</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_03_relazioni_gruppi_ab/"><b>4.3. Relazioni tra gruppo A e B</b></a></li>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_04_sezioni/"><b>4.4. Sezioni</b></a></li>
                       </ul>
+                    <li><a href="https://velitch.github.io/velitch/2021-11-02-05_00_mikrofonie_ii/"><b>5. Mikrofonie II</b></a></li>
+                      <ul>
+                      <li><a href="https://velitch.github.io/velitch/2021-11-02-05_01_relazione_mikrofonie_i/"><b>5.1. Relazione con Mikrofonie I</b></a></li>
+                      </ul>
+                    <li><a href="https://velitch.github.io/velitch/2021-11-02-6_telemusik_e_hymnen/"><b>6. Telemusik e Hymnen</b></a></li>
+                    </ul>
                       <br><br>
                   </p>
               </div>
