--- a/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
@@ -84,6 +84,19 @@
     </div>
 </section>
 
+<!-- Image-->
+      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+          <div class="container-fluid">
+              <div class="row justify-content-center">
+                  <div class="col-12 col-lg-5">
+                      <div class="image-wrapper">
+                          <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/fig10.jpg" alt="www.gabrielavelitch.com">
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 10</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
