--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -106,10 +106,10 @@
                     <ul>
                       <li><b>1. I primi brani di Stockhausen</b></li>
                       <ul>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_01_etude/"><b>1.1. Etude</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_02_studio_i/"><b>1.2. Studio I</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_03_studio_ii/"><b>1.3. Studio II</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-01_04_i_tre_brani_a_confronto/"><b>1.4. I tre studi a confronto</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><b>1.1. Etude</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><b>1.2. Studio I</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><b>1.3. Studio II</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html"><b>1.4. I tre studi a confronto</b></a></li>
                     </ul>
                       <li><b>2. Punkte, Gruppen, Momente</b></li>
                       <ul>
