--- a/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
@@ -91,7 +91,7 @@
                   <div class="col-12 col-lg-5">
                       <div class="image-wrapper">
                           <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/fig10.jpg" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 10</p>
+                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. Etude http://stockhausenspace.blogspot.com</p>
                       </div>
                   </div>
               </div>
