--- a/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html
@@ -90,7 +90,7 @@
               <div class="row justify-content-center">
                   <div class="col-12 col-lg-5">
                       <div class="image-wrapper">
-                          <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/fig10.jpg" alt="www.gabrielavelitch.com">
+                          <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/fig.10_etude.jpg" alt="www.gabrielavelitch.com">
                           <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. Etude http://stockhausenspace.blogspot.com</p>
                       </div>
                   </div>
