--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -113,39 +113,39 @@
                     </ul>
                       <li><b>2. Punkte, Gruppen, Momente</b></li>
                       <ul>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_01_kontra_punkte/"><b>2.1. Kontra-Punkte</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_02_gruppen/"><b>2.2. Gruppen</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_00_momente/"><b>2.3. Momente</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_01_kontra_punkte.html"><b>2.1. Kontra-Punkte</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_02_gruppen.html"><b>2.2. Gruppen</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_00_momente.html"><b>2.3. Momente</b></a></li>
                         <ul>
-                        <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_01_moment_form/"><b>2.3.1. Moment Form</b></a></li>
-                        <li><a href="https://velitch.github.io/velitch/2021-11-02-02_03_02_momenti_kmdi/"><b>2.3.2. Momenti K, M, D, I</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_01_moment_form.html"><b>2.3.1. Moment Form</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_02_momenti_kmdi.html"><b>2.3.2. Momenti K, M, D, I</b></a></li>
                         </ul>
-                    <li><a href="https://velitch.github.io/velitch/2021-11-02-02_04_00_gesang_der_jungelinge/"><b>2.4. Gesang der Jüngelinge</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_04_00_gesang_der_jungelinge.html"><b>2.4. Gesang der Jüngelinge</b></a></li>
                         <ul>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-02_04_01_gruppi_o_momenti/"><b>2.4.1. Gruppi o Momenti?</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_04_01_gruppi_o_momenti.html"><b>2.4.1. Gruppi o Momenti?</b></a></li>
                         </ul>
                     </ul>
-                    <li><a href="https://velitch.github.io/velitch/2021-11-02-03_00_plus_minus/"><b>3. Plus-Minus</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html"><b>3. Plus-Minus</b></a></li>
                         <ul>
-                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_01_regole/"><b>3.1. Regole</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_00_partitura/"><b>3.2. Partitura</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_01_regole.html"><b>3.1. Regole</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_02_00_partitura.html"><b>3.2. Partitura</b></a></li>
                         <ul>
-                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_01_istruzioni/"><b>3.2.1. Istruzioni</b></a></li>
-                        <li><a href="https://velitch.github.io/velitch/2021-11-02-03_02_02_simboli/"><b>3.2.2. Simboli</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html"><b>3.2.1. Istruzioni</b></a></li>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_02_02_simboli.html"><b>3.2.2. Simboli</b></a></li>
                       </ul>
                     </ul>
-                    <li><a href="https://velitch.github.io/velitch/2021-11-02-04_00_mikrofonie_i/"><b>4. Mikrofonie I</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_00_mikrofonie_i.html"><b>4. Mikrofonie I</b></a></li>
                       <ul>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_01_informazioni_tecniche/"><b>4.1. Informazioni Tecniche</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_02_struttura/"><b>4.2. Struttura</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_03_relazioni_gruppi_ab/"><b>4.3. Relazioni tra gruppo A e B</b></a></li>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-04_04_sezioni/"><b>4.4. Sezioni</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_01_informazioni_tecniche.html"><b>4.1. Informazioni Tecniche</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_02_struttura.html"><b>4.2. Struttura</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_03_relazioni_gruppi_ab.html"><b>4.3. Relazioni tra gruppo A e B</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html"><b>4.4. Sezioni</b></a></li>
                       </ul>
-                    <li><a href="https://velitch.github.io/velitch/2021-11-02-05_00_mikrofonie_ii/"><b>5. Mikrofonie II</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html"><b>5. Mikrofonie II</b></a></li>
                       <ul>
-                      <li><a href="https://velitch.github.io/velitch/2021-11-02-05_01_relazione_mikrofonie_i/"><b>5.1. Relazione con Mikrofonie I</b></a></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/05_01_relazione_mikrofonie_i.html"><b>5.1. Relazione con Mikrofonie I</b></a></li>
                       </ul>
-                    <li><a href="https://velitch.github.io/velitch/2021-11-02-6_telemusik_e_hymnen/"><b>6. Telemusik e Hymnen</b></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/6_telemusik_e_hymnen.html"><b>6. Telemusik e Hymnen</b></a></li>
                     </ul>
                       <br><br>
                   </p>
