--- a/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html
@@ -175,6 +175,47 @@
                       </div>
                   </section>
 
+                  <!-- Text-->
+                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-md-12 col-lg-8">
+                                  <p class="mbr-text mbr-fonts-style display-7">
+                                    Questo aspetto ci interessa particolarmente perché ci fa capire meglio come la serie in sé non sia
+                                    altro che una sequenza di indici in sé astratti che hanno bisogno di un materiale preordinato posto in
+                                    forma di scala a cui questi indici possano essere associati per la scelta di un elemento piuttosto che
+                                    un altro all'interno della scala.
+                                    <br>
+                                    <br>
+                                    Mentre la sequenza seriale applicata alle frequenze, cosa abbastanza familiare perché tra frequenze
+                                    e note la differenza è minima, il fatto che queste serie possano anche applicarsi a cose che non
+                                    hanno niente a che fare con le note, come per esempio il numero di timbri per ogni frase, ci fa
+                                    capire che si tratta di un principio astratto, ordinatore, che non ha alcun residuo tematico, come
+                                    poteva essere in alcune opere tardive di <i>Schönberg</i> o <i>Berg</i>.
+                                    <br>
+                                    <br>
+                                    Concezione della serialità come principio ordinatore astratto il cui ambito di applicazione dipende
+                                    da quella famosa scala soggiacente, sottesa, di cui abbiamo parlato prima, che nel caso della
+                                    dodecafonia è il totale cromatico delle dodici altezze ordinate in scala, invece per Stockhausen
+                                    corrisponde a scale di elementi eterogenei che a volte posso scale qualitative, per esempio:
+                                    <br>
+                                    <br>
+                                    <ul>
+                                      <li>durate singole sinusoidi</li>
+                                      <li>rapporto fade in/out</li>
+                                      <li>presenza/assenza riverbero</li>
+                                      <li>sovrapposizione/giustapposizione</li>
+                                    </ul>
+                                    <p class="mbr-text mbr-fonts-style display-7">
+                                    Si tratta di decisioni puramente qualitative. Non c'è una quantità da serializzare ma una modalità.
+                                    Questo ci fa capire meglio di ogni altra cosa che cosa sia questa matrice seriale che sta alla base del
+                                    lavoro di Karlheinz.
+                                  </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
