--- a/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html
@@ -107,7 +107,7 @@
                     <br>
                     La struttura del pezzo è rigidamente gerarchizzata, anche se il fatto di avere misture molto diverse
                     per numero di oscillatori impegnati e materiali di base molto diversi che cambiano da sezione a
-                    sezione, ha come risultato un effetto molto più caotico rispetto a quanto accade in <a href="https://velitch.github.io/velitch/2021-11-02-01_03_studio_ii/"><i>Studio II</i></a>.
+                    sezione, ha come risultato un effetto molto più caotico rispetto a quanto accade in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><i>Studio II</i></a>.
                     Come è organizzato questo pezzo:
                   </p>
                 </div>
@@ -221,8 +221,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
