--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -104,7 +104,7 @@
                   </h4>
                   <p class="mbr-text mbr-fonts-style display-7">
                     <ul>
-                      <li><b>1. I primi brani di Stockhausen</b></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_00_i_primi_brani_di_stockhausen.html"><b>1. I primi brani di Stockhausen</b></a></li>
                       <ul>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><b>1.1. Etude</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><b>1.2. Studio I</b></a></li>
