--- a/pages/learn/analisi_compositiva_stockhausen/01_00_i_primi_brani_di_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_00_i_primi_brani_di_stockhausen.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Etude</title>
+  <title>I Primi Brani di Stockhausen</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,25 +78,12 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva: Karheinz Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Etude</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>I Primi Brani di Stockhausen</strong></h4>
             </div>
         </div>
     </div>
 </section>
 
-<!-- Image-->
-      <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-          <div class="container-fluid">
-              <div class="row justify-content-center">
-                  <div class="col-12 col-lg-5">
-                      <div class="image-wrapper">
-                          <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/fig.10_etude.jpg" alt="www.gabrielavelitch.com">
-                          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. Etude <br> http://stockhausenspace.blogspot.com</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -104,40 +91,11 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Composizione dal titolo francese perché fu realizzata presso gli studi del GRM di Parigi sotto la
-                    direzione di <i>Pierre Schaeffer</i>, che non dimostrò mai particolare interesse per il lavoro del giovane
-                    Stockhausen, il quale del resto non si trova molto a suo agio con le logiche ancora pienamente
-                    coinvolte nella tecnica del collage, il rimando ad elementi esterni che caratterizzano la pratica
-                    parigina. In quel periodo era a Parigi per studiare con <i>Oliver Messiaen</i>, ma soprattutto perché
-                    l'unica possibilità di confrontarsi con la musica elettronica era grazie a questo studio.
-                    <br>
-                    <br>
-                    Etude è un pezzo abbastanza semplice: ha una polifonia a sei strati basati su un materiale di base di
-                    sei registrazioni di corde di pianoforte percosse.
-                    <br>
-                    <br>
-                    Queste registrazioni sono poi sottoposte a modifiche di vario genere, soprattutto con il fonogeno
-                    cromatico.
-                    <br>
-                    <br>
-                    Se ne ricava una serie di frammenti di varia lunghezza che poi sono collocati su nastro bianco, un
-                    nastro guida.
-                    <br>
-                    <br>
-                    Il pezzo lo si può rappresentare come la sovrapposizione di questi nastri guida che ci darebbe
-                    un'immagine simile alla <i>fig. Etude</i>.
-                    <br>
-                    <br>
-                    I criteri che presiedono l'organizzazione del materiale sono sostanzialmente seriali. Ricordiamo che
-                    quando si parla di serialità, non ci si riferisce solo al fatto che esista una serie numerica che
-                    raggruppa i materiali, quanto al fatto che sotto a un livello inferiore di organizzazione di esso, c'è
-                    l'idea che questi materiali possano essere disposti in una scala neutra. In pratica, così come in una
-                    serie dodecafonica il presupposto irrinunciabile è che esista una scala cromatica in cui i dodici gradi
-                    sono organizzati in maniera sequenziale, così il pensiero seriale ha bisogno di organizzare i
-                    materiali sì in serie, ma queste devono corrispondere a una disponibilità di materiale già disposto in
-                    una sequenza così neutra esattamente come i dodici gradi della scala cromatica.
-                    Attenzione dunque perché in questo caso il pensiero seriale implica una forma di organizzazione
-                    scalare che sottende l'organizzazione seriale propriamente detta.
+                    <ul>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><i>Etude</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><i>Studio I</i></a></li>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><i>Studio II</i></a></li>
+                  </ul>
                   </p>
                 </div>
             </div>
@@ -151,8 +109,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_00_i_primi_brani_di_stockhausen.html">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center">
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
