--- a/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html
@@ -209,8 +209,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
