--- a/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html
@@ -134,7 +134,7 @@
                               L'ultima parte è riassuntiva di tutto il processo e presenta sia misture giustapposte che sovrapposte.
                               <br>
                               <br>
-                              La cosa interessante di _Studio II_ è che quello che in [_Studio I_](https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html) era un principio organizzativo
+                              La cosa interessante di Studio II è che quello che in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><i>Studio I</i></a> era un principio organizzativo
                               onnipresente, qui diventa un principio organizzatore della forma. Tutto questo in vista di una
                               notevole semplificazione.
                             </p>
