--- a/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html
@@ -106,14 +106,14 @@
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
                     Riassumendo possiamo dire che esiste un percorso evolutivo che porta dall'<a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><i>Etude</i></a> del 1952 allo
-                    <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><i>Studio II</i></a> del 1954, che è ad esempio la durata che in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><i>Studio I</i></a> è triplicata (rispetto all'_Etude_) per poter
+                    <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><i>Studio II</i></a> del 1954, che è ad esempio la durata che in <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_02_studio_i.html"><i>Studio I</i></a> è triplicata (rispetto all<a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><i>Etude</i></a>) per poter
                     dire tutto ciò che c'è da dire con quel materiale, considerando l'introduzione della ridondanza
                     artificiale come quella della ripetizione in eco e trasposizione. E poi identifichiamo un ritorno con la
                     semplificazione dello spazio delle frequenze e con il pre allestimento di un sistema sonoro ad una
                     durata più contenuta (con Studie II).
                     <br>
                     <br>
-                    Il <b>materiale</b> è concreto nell'<a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><i>Etude</i></a> per ragioni contestuali, mentre è di sintesi negli _Studie_.
+                    Il <b>materiale</b> è concreto nell'<a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_01_etude.html"><i>Etude</i></a> per ragioni contestuali, mentre è di sintesi negli <i>Studie</i>.
                     <br>
                     <br>
                     L'<b>organizzazione</b> è seriale in tutti i casi.
@@ -161,8 +161,8 @@
                     rappresentazione grafica che faccia testo.
                     <br>
                     <br>
-                    Questa è la motivazione che porterà alla rappresentazione dettagliata di _Kontakte_, per i processi, per
-                    lo strumentario, per una resa del materiale musicale. _Kontakte_ è un esempio della fibrillazione della
+                    Questa è la motivazione che porterà alla rappresentazione dettagliata di <i>Kontakte</i>, per i processi, per
+                    lo strumentario, per una resa del materiale musicale. <i>Kontakte</i> è un esempio della fibrillazione della
                     mentalità testuale, chiaro esempio del fatto che ci debba essere un testo validante della musica. Ma
                     nel caso di <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><i>Studio II</i></a> manca nell'elettronica la parte istruttiva, poiché le partiture di Kontakte e
                     Studie II sono un lascito culturale, testimonianza di coerenza, controllo e autorialità (Stockhausen
