--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -111,7 +111,7 @@
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html"><b>1.3. Studio II</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html"><b>1.4. I tre studi a confronto</b></a></li>
                     </ul>
-                      <li><b>2. Punkte, Gruppen, Momente</b></li>
+                      <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_00_punkte_gruppen_momente.html"><b>2. Punkte, Gruppen, Momente</b></a></li>
                       <ul>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_01_kontra_punkte.html"><b>2.1. Kontra-Punkte</b></a></li>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_02_gruppen.html"><b>2.2. Gruppen</b></a></li>
