--- a/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html
+++ b/pages/learn/analisi_compositiva_stockhausen/01_04_i_tre_brani_a_confronto.html
@@ -193,8 +193,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/01_03_studio_ii.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_00_punkte_gruppen_momente.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
