--- a/pages/learn/analisi_compositiva_stockhausen/02_03_02_momenti_kmdi.html
+++ b/pages/learn/analisi_compositiva_stockhausen/02_03_02_momenti_kmdi.html
@@ -91,7 +91,7 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-                    Nella composizione _Momente_ si hanno quattro tipi di momente:
+                    Nella composizione <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_00_momente.html"><i>Momente</i></a> si hanno quattro tipi di momente:
                     <ul>
                     <li>momento K: klang, cioè suono.</li>
                     <li>momento M: melodia.</li>
@@ -134,8 +134,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_01_moment_form.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_04_00_gesang_der_jungelinge.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
