--- a/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html
+++ b/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Plus-Minus</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva: Karheinz Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Plus-Minus</strong></h4>
             </div>
         </div>
     </div>
@@ -91,7 +91,28 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Composizione di Stockhausen del 1963-63 che corrisponde all'esemplare più significativo della
+                    modalità di composizione della rappresentazione di un processo, che caratterizza il periodo dei
+                    primi anni '60, concorrenzialmente alla <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_01_moment_form.html"><i>moment form</i></a>. Stockhausen non è contrario per principio
+                    alle forme drammaturgiche, ovvero quelle che hanno movimento, direzionalità precisa, ovvero
+                    forme orientate. La caratteristica della <a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_03_01_moment_form.html"><i>moment form</i></a>
+                    è che essa non è orientata, ed all'interno del
+                    momento, pur riscontrando delle tendenze o linee di tendenza statistiche, tendenzialmente il
+                    momento è pensato da Stockhausen come un qualcosa che non cambia, qualcosa sempre simile a se
+                    stesso. Una sequenza continua di climax, anziché come le forme drammaturgiche orientate: un
+                    qualcosa che va verso un climax e poi si estingue.
+                    <br>
+                    <br>
+                    Il processo mette in questo caso in scena un qualcosa di drammatico, mette in scena un qualcosa di
+                    drammaturgico, orientato nel tempo, con dei riferimenti, degli sviluppi, delle relazioni orientate
+                    temporali, rispetto ad una Moment form che non ha queste relazioni.
+                    <br>
+                    <br>
+                    Nel complesso, cosa significano le 3 parti della composizione e quali sono i criteri alla base di
+                    questa partitura. Le motivazioni che spingono Stockhausen a creare determinate regole, meccanismi
+                    che fanno scattare il gioco della composizione, ovvero cosa da a questo processo il carattere di una
+                    certa composizione o di un'altra. Quanto entra in gioco la scelta dell'esecutore, e quanto entra in
+                    gioco di chi finalizza la partitura, e su quali elementi le scelte vanno a cadere?
                   </p>
                 </div>
             </div>
@@ -105,8 +126,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_04_01_gruppi_o_momenti.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_01_regole.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
