--- a/pages/learn/analisi_compositiva_stockhausen.html
+++ b/pages/learn/analisi_compositiva_stockhausen.html
@@ -124,6 +124,7 @@
                         <ul>
                       <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_04_01_gruppi_o_momenti.html"><b>2.4.1. Gruppi o Momenti?</b></a></li>
                         </ul>
+                        <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/02_05_considerazioni.html"><b>2.5. Considerazioni</b></a></li>
                     </ul>
                     <li><a href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/03_00_plus_minus.html"><b>3. Plus-Minus</b></a></li>
                         <ul>
