--- a/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Istruzioni</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva: Karheinz Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Istruzioni</strong></h4>
             </div>
         </div>
     </div>
@@ -91,12 +91,122 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    <ol>
+                    <li>7 pagine di note e 7 pagine di simboli</li>
+                    <li>uno o più interpreti possono realizzare uno o più livelli di queste 14 pagine, si possono
+                    combinare fino a 7 livelli diversi(il pezzo può essere eseguito da un solista o 7 solisti,
+                    ognuno dei quali si fa responsabile di ogni coppia simbolo e pagina)(regola che non ci dice
+                    se uno da uno vanno intesi insieme o se un solo un solo interprete può mescolare 2 o più
+                    livelli)</li>
+                    3. Una pagina di simboli deve esser applicata ad ogni pagina di note
+                    4. Simboli in un quadrato significano un singolo evento musicale(punto, gruppo, minimomento),
+                    ma cosa sia l'evento musicale è da determinare
+                    5. Le pagine dei simboli e gli eventi numerati devono seguire le altre pagine continuamente:
+                    - Zentralklang ovvero suono centrale, suono di riferimento, suono base che corrisponde a uno
+                    dei cluster con numeri romani
+                    - Akzidentien in esso abbiamo delle forme che hanno una lunghezza e durata l'una rispetto
+                    all'altra, suoni accessori rispetto al Zentralklang, essi possono essere indeterminati nel pitch:
+                    - corti
+                    - medi
+                    - lunghi
+                    - indeterminati
+                    - Nebennoten, ovvero note secondarie, ovvero quelle prese dai gruppi 1-6 che sono soggette
+                    soltanto a 2 leggi:
+                    - pronunciate come acciaccature (piú veloce possibile)
+                    - accellerando
+                    - ritardando
+                    6. abbiamo inteso che Zentralklang e Akzidentien formano il corpo centrale, la forma base, e
+                    abbiamo quindi 7 forme principali che possono andarsi a costruire:
+                    <ol>
                   </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Image-->
+          <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+              <div class="container-fluid">
+                  <div class="row justify-content-center">
+                      <div class="col-12 col-lg-5">
+                          <div class="image-wrapper">
+                              <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/3.png" alt="www.gabrielavelitch.com">
+                              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </section>
+
+
+          <!-- Text-->
+          <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+              <div class="container">
+                  <div class="row justify-content-center">
+                      <div class="col-md-12 col-lg-8">
+                          <p class="mbr-text mbr-fonts-style display-7">
+                            Vediamo come ci sono varie configurazioni, che nel loro complesso cerchi e simboli accessori sono
+                            chiamati elementi; essi possono essere o un singolo elemento come il Zentralklang oppure un
+                            simbolo diverso, o una sovrapposizione dei suoni, qui Stockhausen ci da tutti i 7 tipi di eventi,
+                            ognuno di questi tipi è associato a uno degli accordi.
+                            1. Uno dei 7 numeri romani è associato a uno dei 7 tipi di eventi, la differenza da una pagina
+                            all'altra cambia con le pagine di note
+                            2. Sopra alcuni Zentralklang ci sono delle bandierine, che portano scritto "+,-, o un numero"
+                            che significano che ad ogni successiva ricomparsa dello stesso simbolo, finché non c'è
+                            bandierina diversa, allo stesso simbolo può essere tolto o aggiunto un numero di elementi
+                            pari a quelli indicati dal numero.(cuore del pezzo). Esempio:
+                          </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Image-->
+                  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+                      <div class="container-fluid">
+                          <div class="row justify-content-center">
+                              <div class="col-12 col-lg-5">
+                                  <div class="image-wrapper">
+                                      <img src="https://www.gabrielavelitch.com/img/analisi_compositiva_stockhausen/4.png" alt="www.gabrielavelitch.com">
+                                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4"></p>
+                                  </div>
+                              </div>
+                          </div>
+                      </div>
+                  </section>
+
+                  <!-- Text-->
+                  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+                      <div class="container">
+                          <div class="row justify-content-center">
+                              <div class="col-md-12 col-lg-8">
+                                  <p class="mbr-text mbr-fonts-style display-7">
+                                    Se abbiamo un simbolo con +1, la successiva comparsa dello stesso simbolo, possiamo aggiungere
+                                    un elemento, che possiamo aggiungere a destra, a sinistra, ed esso può essere un _z Zentralklang
+                                    completo, un Akzidentien o complesso dei due.
+                                    6. In caso più Akzidentien si trovino uno dietro l'altro devono essere eseguiti alla massima
+                                    velocità possibile, ciò comporta che un singolo tipo puó subire delle aumentazioni, e gli si
+                                    possono montare elementi aggiuntivi dello stesso tipo, fino a 13 aggiunte, se arriviamo a 13
+                                    si azzera tutto e si torna a 1, ovvero stato iniziale.
+                                    7. Se la partitura ti impone di sottrarre(-), la partitura si complica, poichè devi fare la stessa
+                                    cosa(ovvero aggiungere), quello che vai a aggiungere è un elemento di pausa dello stesso
+                                    valore di quello che avresti aggiunto se fosse stato un "+". Ciò crea delle strutture di silenzi.
+                                    8. Le strutture di silenzi, devono funzionare come nastri che contengono un suono fantasma.
+                                    Dobbiamo quindi aggiungere 2 bande negative (nastri), metafora del sibilo del nastro, silenzi
+                                    che sono pure durate che devono essere abitate da uno sfondo, denominata "banda
+                                    fantasma". ("Very soft, undefinable"). Cosa succede quando si arriva a -13, l'elemento viene
+                                    eliminato, e se lo incontriamo un'altra volta esso non potrà esser suonato. Vi sono casi in cui
+                                    un simbolo non ha la possibilità di realizzarsi come aumentazione o diminuzione.
+                                    (altre istruzioni fino a 35)
+                                    <br>
+                                    <br>
+                                    Le scelte molto diverse danno identità alla singola esecuzione e meccanismo di conservazione del
+                                    DNA sonoro.
+                                  </p>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
 
 
 
