--- a/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/03_02_01_istruzioni.html
@@ -98,24 +98,29 @@
                     ognuno dei quali si fa responsabile di ogni coppia simbolo e pagina)(regola che non ci dice
                     se uno da uno vanno intesi insieme o se un solo un solo interprete può mescolare 2 o più
                     livelli)</li>
-                    3. Una pagina di simboli deve esser applicata ad ogni pagina di note
-                    4. Simboli in un quadrato significano un singolo evento musicale(punto, gruppo, minimomento),
-                    ma cosa sia l'evento musicale è da determinare
-                    5. Le pagine dei simboli e gli eventi numerati devono seguire le altre pagine continuamente:
-                    - Zentralklang ovvero suono centrale, suono di riferimento, suono base che corrisponde a uno
-                    dei cluster con numeri romani
-                    - Akzidentien in esso abbiamo delle forme che hanno una lunghezza e durata l'una rispetto
-                    all'altra, suoni accessori rispetto al Zentralklang, essi possono essere indeterminati nel pitch:
-                    - corti
-                    - medi
-                    - lunghi
-                    - indeterminati
-                    - Nebennoten, ovvero note secondarie, ovvero quelle prese dai gruppi 1-6 che sono soggette
-                    soltanto a 2 leggi:
-                    - pronunciate come acciaccature (piú veloce possibile)
-                    - accellerando
-                    - ritardando
-                    6. abbiamo inteso che Zentralklang e Akzidentien formano il corpo centrale, la forma base, e
+                    <li>Una pagina di simboli deve esser applicata ad ogni pagina di note</li>
+                    <li>Simboli in un quadrato significano un singolo evento musicale(punto, gruppo, minimomento),
+                    ma cosa sia l'evento musicale è da determinare</li>
+                    <li>Le pagine dei simboli e gli eventi numerati devono seguire le altre pagine continuamente:
+                    <ul>
+                      <li>Zentralklang ovvero suono centrale, suono di riferimento, suono base che corrisponde a uno
+                    dei cluster con numeri romani</li>
+                    <li>Akzidentien in esso abbiamo delle forme che hanno una lunghezza e durata l'una rispetto
+                    all'altra, suoni accessori rispetto al Zentralklang, essi possono essere indeterminati nel pitch:</li>
+                    <ul>
+                    <li>corti</li>
+                    <li>medi</li>
+                    <li>lunghi</li>
+                    <li>indeterminati</li>
+                  </ul>
+                    <li>Nebennoten, ovvero note secondarie, ovvero quelle prese dai gruppi 1-6 che sono soggette
+                    soltanto a 2 leggi:</li>
+                    <ul>
+                    <li>pronunciate come acciaccature (piú veloce possibile)
+                    <li>accellerando</li>
+                    <li>ritardando</li>
+                    </ul>
+                    <li>abbiamo inteso che Zentralklang e Akzidentien formano il corpo centrale, la forma base, e
                     abbiamo quindi 7 forme principali che possono andarsi a costruire:
                     <ol>
                   </p>
