--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>Il Concetto di Pregiudizio</title>
+  <title>Sezioni</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -78,7 +78,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Analisi Compositiva: Karheinz Stockhausen</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Vibrazione Come Modello Universale</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Sezioni</strong></h4>
             </div>
         </div>
     </div>
@@ -91,13 +91,44 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Le 33 sezioni hanno un'incredibile collezione di parole descrittive di quello che deve essere il
+                    suono. La rappresentazione strutturale ci da delle relazioni qualitative di cui ci sfugge il contenuto
+                    esatto. La partitura è una specie di intavolatura.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
+<!-- Table-->
+    <table>
+      <tr>
+        <td>I Quakend</td>
+        <td>1</td>
+        <td>I: croaking, quacking</td>
+      </tr>
+
+    <!-- Text-->
+    <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-8">
+                    <p class="mbr-text mbr-fonts-style display-7">
+                      Questa è una partitura delle descrizioni del suono, descrivendo qual'è il contenuto acustico che deve
+                      uscire con verbi e avverbi come se fosse un gioco di carte, in cui mettiamo in ogni carta una
+                      descrizione del suono che esca. Stockhausen descrive i suoni con verbi impressionistici, quasi
+                      spiritosi. Ha necessità di avere un controllo totale sul suono che però non ha un esito univoco per gli
+                      esecutori. Il compositore ha costruito lo scheletro che diviene totalmente improvvisativo.
+                      <br>
+                      <br>
+                      La partitura verbale delle 33 sezioni è il risultato a posteriori. A noi interessa quale tipo di problema
+                      sollecita la scrittura di parole che indichino qualità sonore. I filtri inoltre non reagiscono allo stesso
+                      modo.
+                    </p>
+                  </div>
+              </div>
+          </div>
+      </section>
 
 
 <!-- Prev/Next-->
@@ -105,8 +136,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/04_03_relazioni_gruppi_ab.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/analisi_compositiva_stockhausen/05_00_mikrofonie_ii.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
