--- a/pages/learn/analisi_compositiva_stockhausen/04_03_relazioni_gruppi_ab.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_03_relazioni_gruppi_ab.html
@@ -125,6 +125,7 @@
                       <li>diminuisce</li>
                       </ul>
                       </ul>
+                      <p class="mbr-text mbr-fonts-style display-7">
                     Il bello è che alcuni aspetti di queste serie siano intuitivi mentre altri bisogna andarli a cercare. Vi è
                     una contrapposizione drammatica nell'inquadrare tutti in modo seriale, deterministico e senza
                     alternativa e possibilità, ma all'interno questi elementi deterministici presentano una grande
