--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -107,7 +107,9 @@
         <td>1</td>
         <td>I: croaking, quacking</td>
       </tr>
+    </table>
 
+    
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
         <div class="container">
