--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -101,15 +101,38 @@
     </section>
 
 <!-- Table-->
-    <table>
-      <tr>
-        <td>I Quakend</td>
-        <td>1</td>
-        <td>I: croaking, quacking</td>
-      </tr>
-    </table>
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>Mark</td>
+      <td>Otto</td>
+      <td>@mdo</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Jacob</td>
+      <td>Thornton</td>
+      <td>@fat</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Larry</td>
+      <td>the Bird</td>
+      <td>@twitter</td>
+    </tr>
+  </tbody>
+</table>
 
-    
+
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
         <div class="container">
