--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -117,9 +117,9 @@
                 <tbody>
                   <tr>
                     <th scope="row">1</th>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>@mdo</td>
+                    <td>I Quakend</td>
+                    <td>1</td>
+                    <td>I: croaking, quacking</td>
                   </tr>
                   <tr>
                     <th scope="row">2</th>
