--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -119,18 +119,18 @@
                   </tr>
                   <tr>
                     <th scope="row">3</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Winselnd - Jaulend</td>
+                    <td>I: whimpering - wailing</td>
                   </tr>
                   <tr>
                     <th scope="row">4</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Wirbelnd - Trommelnd - Knarrend</td>
+                    <td>II: whirling - drumming - grating</td>
                   </tr>
                   <tr>
                     <th scope="row">5</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Rassenlng - Aechzend - Donnernd</td>
+                    <td>I: clashing, clanking - groaning, creaking - thundering</td>
                   </tr>
                   <tr>
                     <th scope="row">6</th>
