--- a/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
+++ b/pages/learn/analisi_compositiva_stockhausen/04_04_sezioni.html
@@ -134,48 +134,48 @@
                   </tr>
                   <tr>
                     <th scope="row">6</th>
-                    <td></td>
-                    <td></td>
+                    <td>I+II Tutti forte</td>
+                    <td>I+II: Tutti forte</td>
                   </tr>
                   <tr>
                     <th scope="row">7</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Rauschend - Toenend - Tutend / I + II Glaesern Singend</td>
+                    <td>II: rushing, rustling - ringing, resounding - hooting / I + II: glassy singing (whining)</td>
                   </tr>
                   <tr>
                     <th scope="row">8</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Wispernd</td>
+                    <td>I: whispering</td>
                   </tr>
                   <tr>
                     <th scope="row">9</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Berstend (Krachend)</td>
+                    <td>II: bursting (crashing)</td>
                   </tr>
                   <tr>
                     <th scope="row">10</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Trillernd Knallend Gellend</td>
+                    <td>I: trilling, tinkling - banging, clanging - yelling</td>
                   </tr>
                   <tr>
                     <th scope="row">11</th>
-                    <td>I Quakend</td>
-                    <td>I: croaking, quacking</td>
+                    <td>I Collage</td>
+                    <td>I: Collage</td>
                   </tr>
                   <tr>
                     <th scope="row">12</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Y (Ypsilon)</td>
+                    <td>II: Y (Ypsilon)</td>
                   </tr>
                   <tr>
                     <th scope="row">13</th>
-                    <td></td>
-                    <td></td>
+                    <td>I Zirpend - Schnarchend - Grunzend</td>
+                    <td>I: chirping - snorting, snoring - grunting</td>
                   </tr>
                   <tr>
                     <th scope="row">14</th>
-                    <td></td>
-                    <td></td>
+                    <td>II Rollend</td>
+                    <td>II: Rollend</td>
                   </tr>
                   <tr>
                     <th scope="row">15</th>
